tests/fixtures/invalid/int_lshift_none.py
# Cannot left shift Int and None
x: int = 1 << None
